{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "MinigameInteractions",
            "id": "894d758d-663f-41ff-b461-8dbb53faf258",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "PassThrough",
                    "id": "8ef45cab-6a35-4338-91d6-a2b91de1cc9e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "88a878d5-b0a1-4c55-a525-4135148753e4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d5b2b733-895a-42a5-bfd6-7924c4a55fd5",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "76395869-ee07-4a26-9ff9-285a53b8366d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}